--- a/sites/food.html
+++ b/sites/food.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <!-- Bootstrap init -->
+
+    <link rel="stylesheet" href="../css/jquery.mobile-1.4.5.min.css" />
     <script src="../js/jquery-1.11.2.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/jquery.mobile-1.4.5.min.js"></script>
     <script src="phonegap.js"></script>
     <script src="../js/main.js"></script>
 
     <!-- Styles init -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css"/>
-    <link rel="stylesheet" href="../css/bootstrap-theme.min.css" type="text/css"/>
-    <link rel="stylesheet" href="../css/bootstrap.css" type="text/css"/>
+
     <link rel="stylesheet" href="../css/normalize.css" type="text/css"/>
-    <link rel="stylesheet" href="../css/styles.css" type="text/css"/>
+
 
 
 
@@ -24,42 +24,21 @@
 </head>
 
 <body>
+    <div data-role="page">
 
-<div id="everything" class="content-info" style="padding: 5px; color: #ffffff">
-    <a href="../index.html" class="js">
-        <div class="header_div">
-            <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
-        </div>
-    </a>
-    <div class="container-fluid">
-        <div class="row">
-            <a>
-                <div class="col-xs-12 food_container">Salzburger Brezeln<img src="../img/max/arrow_right.gif" class="arrow_right"/>
-                </div>
-            </a>
-        </div>
-        <div class="row">
-            <a>
-                <div class="col-xs-12 food_container">Salzburger Brezeln<img src="../img/max/arrow_right.gif" class="arrow_right"/>
-                </div>
-            </a>
-        </div>
-        <div class="row">
-            <a>
-                <div class="col-xs-12 food_container">Salzburger Brezeln<img src="../img/max/arrow_right.gif" class="arrow_right"/>
-                </div>
-            </a>
-        </div>
-        <div class="row">
-            <a>
-                <div class="col-xs-12 food_container">Salzburger Brezeln<img src="../img/max/arrow_right.gif" class="arrow_right"/>
-                </div>
-            </a>
-        </div>
+        <div data-role="header">
+            <h1>Page Title</h1>
+        </div><!-- /header -->
 
-    </div>
+        <div role="main" class="ui-content" style=" background: linear-gradient( rgba(33,42,82,0.7), rgba(36,87,162,0.7)),  url('../img/background.png') center; height: 100%">
+            <p>This is a test for mobile</p>
+        </div><!-- /content -->
 
-</div>
+        <div data-role="footer">
+            <h4>Page Footer</h4>
+        </div><!-- /footer -->
+    </div><!-- /page -->
+
 
 </body>
 
