--- a/sites/timetable.html
+++ b/sites/timetable.html
@@ -21,15 +21,51 @@
 
     <title>Timetable</title>
 
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $("#tabs a").click(function(e){
+                e.preventDefault();
+                $(this).tab('show');
+            });
+        });
+    </script>
+
 </head>
 
 <body>
-<ul class="nav nav-tabs timetable_nav">
-    <li role="presentation" class="timetable_element"><a href="#">Wednesday</a></li>
-    <li role="presentation"><a href="#">Thursday</a></li>
-    <li role="presentation"><a href="#">Friday</a></li>
-    <li role="presentation"><a href="#">Saturday</a></li>
-</ul>
+    <div>
+        <ul class="nav nav-tabs" id="tabs">
+            <li class="active"><a href="#wednesday">Wednesday</a></li>
+            <li><a href="#thursday">Thursday</a></li>
+            <li><a href="#friday">Friday</a></li>
+            <li><a href="#saturday">Saturday</a></li>
+        </ul>
+
+        <div class="tab-content">
+            <div id="wednesday" class="tab-pane fade">
+                <h3>Section A</h3>
+                <p>Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan
+                    american apparel, butcher voluptate nisi qui. Raw denim you probably haven't heard of them jean shorts Austin. N
+                    esciunt tofu stumptown aliqua, retro synth master cleanse. Mustache c
+                    liche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth.</p>
+            </div>
+            <div class="tab-content">
+                <div id="thursday" class="tab-pane fade">
+                    Here line up thursady
+                </div>
+            </div>
+            <div class="tab-content">
+                <div id="friday" class="tab-pane fade">
+                    Here line up friday
+                </div>
+            </div>
+            <div class="tab-content">
+                <div id="saturday" class="tab-pane fade">
+                    Here line up saturday
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
