--- a/sites/timetable.html
+++ b/sites/timetable.html
@@ -1,68 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-
-    <!-- Bootstrap init -->
+    <meta charset="UTF-8">
+    <title>Example of Bootstrap 3 Dynamic Tabs</title>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    <script src="phonegap.js"></script>
-    <script src="../js/main.js"></script>
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCmouXxBlDi9G_UQigvgCxilD8LjKWMfBc&sensor=false">
-    </script>
 
-    <!-- Styles init -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="../css/bootstrap-theme.min.css" type="text/css">
-    <link rel="stylesheet" href="../css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="../css/normalize.css" type="text/css">
-    <link rel="stylesheet" href="../css/styles.css" type="text/css">
-
-    <title>Timetable</title>
-
-    <script type="text/javascript">
-        $(document).ready(function(){
-            $("#tabs a").click(function(e){
-                e.preventDefault();
-                $(this).tab('show');
-            });
-        });
-    </script>
-
+    <style type="text/css">
+        .bs-example{
+            margin: 20px;
+        }
+    </style>
 </head>
 
 <body>
-    <div>
-        <ul class="nav nav-tabs" id="tabs">
-            <li class="active"><a href="#wednesday">Wednesday</a></li>
-            <li><a href="#thursday">Thursday</a></li>
-            <li><a href="#friday">Friday</a></li>
-            <li><a href="#saturday">Saturday</a></li>
-        </ul>
+    <div id="everything" class="content-info" style="padding: 5px; color: #ffffff">
+        <a href="../index.html" class="js">
+            <div class="header_div">
+                <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
+            </div>
+        </a>
+        <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" class="tt_tab" href="#wednesday">Wednesday</a></li>
+            <li><a data-toggle="tab" class="tt_tab" href="#thursday">Thrusday</a></li>
+            <li><a data-toggle="tab" class="tt_tab" href="#friday">Friday</a></li>
+            <li><a data-toggle="tab" class="tt_tab" href="#saturday">Saturday</a></li>
 
+        </ul>
         <div class="tab-content">
-            <div id="wednesday" class="tab-pane fade">
-                <h3>Section A</h3>
-                <p>Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan
-                    american apparel, butcher voluptate nisi qui. Raw denim you probably haven't heard of them jean shorts Austin. N
-                    esciunt tofu stumptown aliqua, retro synth master cleanse. Mustache c
-                    liche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth.</p>
-            </div>
-            <div class="tab-content">
-                <div id="thursday" class="tab-pane fade">
-                    Here line up thursady
+            <div id="wednesday" class="tab-pane fade in active">
+                <div class="row_container">
+                    <div class=""><img src="../img/djs/alesso.jpg" class="a_img"></div>
+                        <div class="a_name">Alesso</div>
+                        <hr class="a_hr">
+                        <div class="a_info">20:00</div>
+                        <div class="a_info">Mainstage</div>
+                </div>
+                <div class="row_container">
+                    <div class=""><img src="../img/djs/alesso.jpg" class="a_img"></div>
+                    <div class="a_name">Alesso</div>
+                    <hr class="a_hr">
+                    <div class="a_info">20:00</div>
+                    <div class="a_info">Mainstage</div>
+                </div>
+                <div class="row_container">
+                    <div class=""><img src="../img/djs/alesso.jpg" class="a_img"></div>
+                    <div class="a_name">Alesso</div>
+                    <hr class="a_hr">
+                    <div class="a_info">20:00</div>
+                    <div class="a_info">Mainstage</div>
                 </div>
             </div>
-            <div class="tab-content">
-                <div id="friday" class="tab-pane fade">
-                    Here line up friday
-                </div>
+            <div id="thursday" class="tab-pane fade">
+                <h3>Section B</h3>
+                <p>Vestibulum nec erat eu nulla rhoncus fringilla ut non neque. Vivamus nibh urna, ornare id gravida ut, mollis a magna. Aliquam porttitor condimentum nisi, eu viverra ipsum porta ut. Nam hendrerit bibendum turpis, sed molestie mi fermentum id. Aenean volutpat velit sem. Sed consequat ante in rutrum convallis. Nunc facilisis leo at faucibus adipiscing.</p>
             </div>
-            <div class="tab-content">
-                <div id="saturday" class="tab-pane fade">
-                    Here line up saturday
-                </div>
+            <div id="friday" class="tab-pane fade">
+                <h3>Dropdown 1</h3>
+                <p>WInteger convallis, nulla in sollicitudin placerat, ligula enim auctor lectus, in mollis diam dolor at lorem. Sed bibendum nibh sit amet dictum feugiat. Vivamus arcu sem, cursus a feugiat ut, iaculis at erat. Donec vehicula at ligula vitae venenatis. Sed nunc nulla, vehicula non porttitor in, pharetra et dolor. Fusce nec velit velit. Pellentesque consectetur eros.</p>
+            </div>
+            <div id="saturday" class="tab-pane fade">
+                <h3>Dropdown 2</h3>
+                <p>Donec vel placerat quam, ut euismod risus. Sed a mi suscipit, elementum sem a, hendrerit velit. Donec at erat magna. Sed dignissim orci nec eleifend egestas. Donec eget mi consequat massa vestibulum laoreet. Mauris et ultrices nulla, malesuada volutpat ante. Fusce ut orci lorem. Donec molestie libero in tempus imperdiet. Cum sociis natoque penatibus et magnis.</p>
             </div>
         </div>
     </div>
