--- a/sites/tt_artist.html
+++ b/sites/tt_artist.html
@@ -18,13 +18,15 @@
                 Artists
             </div>
         </a>
+
         <ul class="nav nav-pills">
-            <li class="active"><a data-toggle="pill" class="tt_tab" href="#wednesday">WED</a></li>
-            <li><a data-toggle="pill" class="tt_tab" href="#thursday">THU</a></li>
-            <li><a data-toggle="pill" class="tt_tab" href="#friday">FRI</a></li>
-            <li><a data-toggle="pill" class="tt_tab" href="#saturday">SAT</a></li>
+            <li class="active col-xs-3 pill"><a data-toggle="pill" class="tt_tab" href="#wednesday">WED</a></li>
+            <li class="col-xs-3 pill"><a data-toggle="pill" class="tt_tab" href="#thursday">THU</a></li>
+            <li class="col-xs-3 pill"><a data-toggle="pill" class="tt_tab" href="#friday">FRI</a></li>
+            <li class="col-xs-3 pill"><a data-toggle="pill" class="tt_tab" href="#saturday">SAT</a></li>
 
         </ul>
+
         <div class="tab-content">
             <div id="wednesday" class="tab-pane fade in active">
                 <div class="row_container">
