--- a/sites/tt_stages.html
+++ b/sites/tt_stages.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="../css/styles.css">
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('[data-toggle="popover"]').popover({
+                placement : 'top'
+            });
+        });
+    </script>
 </head>
 
 <body>
@@ -18,6 +26,8 @@
             Artists
         </div>
     </a>
+
+    <button type="button" class="btn btn-lg btn-danger" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
 </div>
 </body>
 
