--- a/sites/tt_artist.html
+++ b/sites/tt_artist.html
@@ -12,18 +12,16 @@
 
 <body>
     <div id="everything" class="content-info" style="padding: 5px; color: #ffffff">
-        <a href="" style="text-decoration: none; color: #ffffff" class="js">
-            <div class="header_div" onclick="history.go(-1);return true;" style="margin-bottom: 10px">
+        <a href="" style="text-decoration: none; color: #ffffff;" class="js">
+            <div class="header_div" onclick="history.go(-1);return true;" style="margin-bottom: 10px; margin-right: 200px">
                 <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
                 Artists
-
                 <a href="#myModal" class="btn btn-lg btn-primary" data-toggle="modal" style="float: right; margin-right: 10px; padding: 6px; width: 150px"><img src="../img/max/shopping.png" style="height: 25px"></a>
 
                 <!-- Modal HTML -->
                 <div id="myModal" class="modal fade">
                     <div class="modal-dialog" style=" margin: 100px auto 0px auto; height: 200px; width: 200px;">
-                        <div class="modal-content" style="background-color: rgba(110, 110, 110, 1);
-">
+                        <div class="modal-content" style="background-color: rgba(110, 110, 110, 1);">
                             <div class="modal-header">
                                 <h4 class="modal-title">Sort by:</h4>
                             </div>
@@ -37,10 +35,11 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </a>
 
-        <ul class="nav nav-pills">
+        <ul class="nav nav-pills" style="margin-bottom: 10px;">
             <li class="active col-xs-3 pill"><a data-toggle="pill" class="tt_tab" href="#wednesday">WED</a></li>
             <li class="col-xs-3 pill"><a data-toggle="pill" class="tt_tab" href="#thursday">THU</a></li>
             <li class="col-xs-3 pill"><a data-toggle="pill" class="tt_tab" href="#friday">FRI</a></li>
