--- a/sites/tt_stages.html
+++ b/sites/tt_stages.html
@@ -13,14 +13,20 @@
 
 <body>
 <div id="everything" class="content-info" style="padding: 5px;">
-    <a href="" style="text-decoration: none" class="js">
-        <div class="header_div" onclick="history.go(-1);return true;" style="margin-bottom: 10px">
-            <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
-            Artists
+    <div class="row" style="padding: 0px; margin: 0px">
+        <a href="" style="text-decoration: none;" class="js">
+            <div class="col-xs-10 header_div" style="padding: 0px">
+                <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
+                Artists
+            </div>
+        </a>
+        <div class="col-xs-2" style="padding: 0px">
+            <a href="#myModal" class="btn btn-lg btn-primary" data-toggle="modal" style="padding: 5px; height: 40px; width: 100%;"><img src="../img/max/shopping.png" style="height: 30px"></a>
         </div>
-    </a>
+    </div>
 
-    <a href="#myModal" class="btn btn-lg btn-primary" data-toggle="modal"><img src="../img/max/shopping.png"></a>
+
+
 
     <!-- Modal HTML -->
     <div id="myModal" class="modal fade">
