--- a/www/sites/artists.html
+++ b/www/sites/artists.html
@@ -25,20 +25,24 @@
 
     <div id="everything" class="content-info">
         <a href="../index.html" style="text-decoration: none">
-            <div class="header_div">
-                <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
-                <em class="header_div" style="background-color: transparent">Artists</em>
+            <div class="row header_fixed">
+                <img src="../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 5px -70px 0 10px; "/>
+                <em class="header_text">Artists</em>
               <!--  <div style="float: right;"><a id="alphBnt"><img src="../img/max/sort.png" style="height: 30px; margin: 0 10px 0 0"
                     onmouseover="this.src='../img/max/sort_blue.png'"
                     onmouseout="this.src='../img/max/sort.png'"></a></div>-->
             </div>
         </a>
-        <div class="wrapper">
+
+
+
+        <div class="wrapper" style="margin-top: 50px">
             <div class="row artist_text"><a href="djs/3lau.html" style="color: #ffffff">
                 <div class="col-xs-2 artist_container"><img src="../img/djs_head/3lau.jpg" class="artist_img"/></div>
                 <div class="col-xs-10 artist_container name">3lau<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
             </div>
+            <div class="row alphabet">A</div>
             <div class="row artist_text"><a href="djs/adam_beyer.html" style="color: #ffffff">
                 <div class="col-xs-2 artist_container"><img src="../img/djs_head/adam_beyer.jpg" class="artist_img"/></div>
                 <div class="col-xs-10 artist_container name">Adam Beyer<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
@@ -69,6 +73,7 @@
                 <div class="col-xs-10 artist_container name">Axwell Λ Ingrosso<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
             </div>
+            <div class="row alphabet">B</div>
             <div class="row artist_text"><a href="djs/bass_modulators.html" style="color: #ffffff">
                 <div class="col-xs-2 artist_container"><img src="../img/djs_head/bass_modulators.jpg" class="artist_img"/></div>
                 <div class="col-xs-10 artist_container name">Bass Modulators<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
@@ -89,6 +94,7 @@
                 <div class="col-xs-10 artist_container name">Brennan Heart<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
             </div>
+            <div class="row alphabet">C</div>
             <div class="row artist_text"><a href="djs/carnage.html" style="color: #ffffff">
                 <div class="col-xs-2 artist_container"><img src="../img/djs_head/carnage.jpg" class="artist_img"/></div>
                 <div class="col-xs-10 artist_container name">Carnage<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
@@ -114,6 +120,7 @@
                 <div class="col-xs-10 artist_container name">Cyber<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
             </div>
+            <div class="row alphabet">D</div>
             <div class="row artist_text"><a href="djs/deorro.html" style="color: #ffffff">
                 <div class="col-xs-2 artist_container"><img src="../img/djs_head/deorro.jpg" class="artist_img"/></div>
                 <div class="col-xs-10 artist_container name">Deorro<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
@@ -134,6 +141,7 @@
                 <div class="col-xs-10 artist_container name">Don Diablo<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
             </div>
+            <div class="row alphabet">E</div>
             <div class="row artist_text"><a href="djs/east_young.html" style="color: #ffffff">
                 <div class="col-xs-2 artist_container"><img src="../img/djs_head/east_and_young.jpg" class="artist_img"/></div>
                 <div class="col-xs-10 artist_container name">East & Young<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
@@ -149,6 +157,7 @@
                 <div class="col-xs-10 artist_container name">Eva Shaw<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
             </div>
+            <div class="row alphabet">F</div>
             <div class="row artist_text"><a href="djs/faulwad_ad.html" style="color: #ffffff">
                 <div class="col-xs-2 artist_container"><img src="../img/djs_head/faul__wad_ad.jpg" class="artist_img"/></div>
                 <div class="col-xs-10 artist_container name">Faul & Wad Ad<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
@@ -169,6 +178,99 @@
                 <div class="col-xs-10 artist_container name">FlicFlac <img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
             </div>
+            <div class="row alphabet">G</div>
+            <div class="row artist_text"><a href="djs/galantis.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/galantis.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Galantis <img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/gecko.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/geck-o.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Geck-O <img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/gunz4hire.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/gunz_for_hire.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Gunz 4 Hire <img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row alphabet">J</div>
+            <div class="row artist_text"><a href="djs/jaguar.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/jaguar_skills.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Jaguar Skills<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/jayhardway.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/jay_hardway.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Jay Hardway<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row alphabet">K</div>
+            <div class="row artist_text"><a href="djs/kaskade.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/kaskade.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Kaskade<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/knifeparty.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/knife_party.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Knife Party<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/korsakoff.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/korsakoff.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Korsakoff<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row alphabet">L</div>
+            <div class="row artist_text"><a href="djs/lenfaki.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/len_faki.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Len Faki<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/lostfreq.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/lost_frequencies.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Lost Frequencies<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row alphabet">M</div>
+            <div class="row artist_text"><a href="djs/maddog.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/mad_dog_anime.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Mad Dog vs. AniMe<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/makj.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/makj.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">MAKJ<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/markknight.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/mark_knight.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Mark Knight<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/mcvillian.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/mc_villian.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">MC Villian<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row alphabet">N</div>
+            <div class="row artist_text"><a href="djs/nicopusch.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/nico_pusch.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Nico Pusch<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/noisecontrollers.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/noisecontrollers.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Noisecontrollers<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row alphabet">O</div>
+            <div class="row artist_text"><a href="djs/oliver.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/oliver_heldens.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Oliver Heldens<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+
 
 
 
