--- a/www/sites/artists.html
+++ b/www/sites/artists.html
@@ -274,7 +274,7 @@
                 <div class="col-xs-10 artist_container name">Peer Kusiv<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
             </div>
-            <div class="row artist_text"><a href="djs/pegboard_nerds.html" style="color: #ffffff">
+            <div class="row artist_text"><a href="djs/pegboard.html" style="color: #ffffff">
                 <div class="col-xs-2 artist_container"><img src="../img/djs_head/pegboard_nerds.jpg" class="artist_img"/></div>
                 <div class="col-xs-10 artist_container name">Pegboard Nerds<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
